scrolling image on crab wears yay

--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -14,6 +14,7 @@
     <title>crabrecommends</title>
   </head>
 
+
   <body>
     <h1>I recommend</h1>
 
@@ -25,7 +26,7 @@
       <div class="card">
         <img class="card-img-top" src="images/betterkiff.jpg" alt="Ken Kiff">
             <div class="card-body">
-                <h5 class="card-title">Ken Kiff: The Sequence • Sainsbury Centre, Norwich • 17th November – Sunday 21st April</h5>
+                <h5 class="card-title">Ken Kiff: The Sequence • Sainsbury Centre • 17th November – Sunday 21st April</h5>
                   <p2 class="card-text">Shown in it’s closest proximity to completeness yet, the 60 piece series of paintings from Ken Kiff’s  Sequence at the Sainsbury Centre is well worth the trip<span id="dots">...</span><span id="more"> (and was also for me a wonderful excuse to discover the delights of Norwich). Despite his paintings are often unrealistic and illogical, to the point that on first glance they appear almost childish, fusing sensitive application of colour allows them to sing for themselves. The effect of joyful colour palette, combined with his strange, and often slightly unsavoury subject matter emphasises an arresting fusion of various juxtapositions the beautiful and ugly, the fantastical and everyday banality.
                   </span></p2>
                     <button onclick="seemore1()" id="myBtn">Read more</button>
@@ -43,7 +44,7 @@
       <div class="card">
         <img class="card-img-top" src="images/tanning.jpg" alt="Dorothy Tanning">
         <div class="card-body">
-          <h5 class="card-title">Dorothea Tanning • Tate • 27 February – June 2019</h5>
+          <h5 class="card-title">Dorothea Tanning • Tate Modern • 27 February – June 2019</h5>
           <p2 class="card-text">Thank you Tate for re-shedding some light on Dorothy Tanning, in the first large-scale exhibition of her work in over 25 years<span id="dots">...</span><span id="more">. Whilst Tanning has perhaps lived slightly in the shadows of her husband and one giants of the Surrealist movement, Max Ernst, this exhibition shows how she took Surrealism to an entirely new level. Whilst her intricately painted older paintings stay truer to the Surrealist tradition, evoking the Gothic through wacky scenarios and landscapes which invite the viewer into a world beyond the tangible, her later paintings are even more successful in conveying a sense of the surreal. As epic in subject matter as they are in size, Tanning confronts us with what it is to be a body in a series of writhing paintings, convulsing with abstracted forms which are at once undoubtedly human, and unsettlingly alien. This sense of discomfort is enhance, as despite the sensuous fleshiness of the brushstrokes, it is difficult to tell whether these tangled masses of figures are revellers or rivals. The same could be said for her soft sculptures, which reduced to a heap of suggestively limb-like curves radiate a disquieting sense of vulnerability and helplessness. With her uncanny ability to evoke such emotion and tangibility through such an abstracted pose or gesture, Tanning leaves us with some disconcerting questions about what actually constitute life and perhaps what it means to take it.
           </span></p2>
           <button onclick="seemore3()" id="myBtn3">Read more</button>
