--- a/crabwears.html
+++ b/crabwears.html
@@ -10,12 +10,11 @@
   </head>
   <body>
 
+<h1 id="header" class="centered">I love a bit of red</h1>
 <div class="parallax">
-<h1>I love a bit of red</h1>
 </div>
 
     <div class="contrast">
-
 
 <img src="images/fashionphotos.jpg">
 By now you'll have seen I'm a true trendsetter. All of my crab friends look to <i>me</i> to see what's en vogue.
