parallax crab draws

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -15,6 +15,12 @@
     <title>crabdraws</title>
   </head>
   <body>
+  <h1 id="header" class="centered">I draw too</h1>
+    <div class="parallax2">
+    </div>
+
+
+
     <div contrast>
       <div class="container">
         <img src="images/artycrabcrop.jpg" class="img-fluid imageshadow" alt="Responsive image">
@@ -23,8 +29,6 @@
           </div>
       </div>
         <div>
-          <p>As an immensely caring, talented, (and modest) crab, I am most alturistic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
-    <div>
       <p>As I an immensely caring, talented, (and modest) crab, I am most altrustic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
         (Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)</p>
       </div>
