--- a/crabdraws.html
+++ b/crabdraws.html
@@ -85,10 +85,10 @@
                   <div class="portfolio-box-caption">
                     <div class="portfolio-box-caption-content">
                       <div class="project-category text-faded">
-                        This Orangutan is an Orphan
+                        Orangutan I
                       </div>
                     <div class="project-name">
-                      How cute is this
+                      Gouache on paper 2019
                     </div>
                   </div>
                 </div>
@@ -100,10 +100,10 @@
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
-                      Fuck yeah I'm an Orangutang
+                      Orangutan II
                     </div>
                     <div class="project-name">
-                      This one is from Borneo as well innit
+                      Gouache on paper 2019
                     </div>
                 </div>
               </div>
@@ -115,10 +115,10 @@
                   <div class="portfolio-box-caption">
                     <div class="portfolio-box-caption-content">
                       <div class="project-category text-faded">
-                        Giraffe
+                        Giraffe I
                       </div>
                       <div class="project-name">
-                        Acrylic on Paper 2019
+                        Acrylic on paper 2018
                       </div>
                     </div>
                   </div>
@@ -130,25 +130,25 @@
                   <div class="portfolio-box-caption">
                     <div class="portfolio-box-caption-content">
                       <div class="project-category text-faded">
-                        Fuck Yeah I drewed another one
+                        Giraffe II
                       </div>
                       <div class="project-name">
-                        Girraffe
+                        Acrylic on paper 2018
                       </div>
                     </div>
                   </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="images/crabdrawingcrab.jpg">
-                  <img class="img-fluid" src="images/crabdrawingcrab.jpg" alt="">
+              <a class="portfolio-box" href="imageschimp2.jpg">
+                  <img class="img-fluid" src="images/chimp2.jpg" alt="">
                   <div class="portfolio-box-caption">
                     <div class="portfolio-box-caption-content">
                       <div class="project-category text-faded">
-                        Call me Van Gogh
+                        Throwing Bananas
                       </div>
                       <div class="project-name">
-                        * I am not included in the price *
+                        Acrylic on linen 2018
                       </div>
                     </div>
                   </div>
@@ -160,7 +160,7 @@
                   <div class="portfolio-box-caption">
                     <div class="portfolio-box-caption-content">
                       <div class="project-category text-faded">
-                        A chimp I met in Kenya
+                        Kenyan Chimp
                       </div>
                       <div class="project-name">
                         Acrylic on Paper, 2018
