parallax header image for recommends

--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -16,11 +16,23 @@
 
 
   <body>
-    <h1>I recommend</h1>
+    <h1 id="header" class="centered">I recommend</h1>
+    <div class="parallax3">
+    </div>
 
-    As an intensely cultural crab, I feel it is my duty to impart some of my wisdom to you through a few reviews.
+    <div class="contrast">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-4">
+                <img src="images/pensivereviewcrab.jpg" class="image-fluid imageshadow">
+              </div>
+              <div class="col-8">
+                <p>  As an intensely cultural crab, I feel it is my duty to impart some of my wisdom to you through a few reviews.
+                  <p/>
+            </div>
+          </div>
+      </div>
 
-    <img src="images/pensivereviewcrab.jpg" class="image-fluid imageshadow">
 <br>
     <div class="card-deck">
       <div class="card">
