deleting unnecessary form, trying to figure out mini pic layout

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -25,7 +25,6 @@
       <div class="container">
         <img src="images/artycrabcrop.jpg" class="img-fluid imageshadow" alt="Responsive image">
           <div class="text-block">
-            <h3>I Draw Too</h3>
           </div>
       </div>
         <div>
@@ -58,7 +57,7 @@
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
               </div>
               <div class="form-group">
-                <label for="exampleFormControlTextarea1">What you sayin</label>
+                <label for="exampleFormControlTextarea1">Tell me your thoughts</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
             </form>
@@ -170,16 +169,7 @@
                 </a>
             </div>
         <div>
-        <form>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">What you sayin</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
-        </div>
+
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
