--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -21,17 +21,10 @@
     </div>
 
     <div class="contrast">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-4">
-                <img src="images/pensivereviewcrab.jpg" class="image-fluid imageshadow">
-              </div>
-              <div class="col-8">
-                <p>  As an intensely cultural crab, I feel it is my duty to impart some of my wisdom to you through a few reviews.
-                  <p/>
-            </div>
-          </div>
-      </div>
+       <img src="images/pensivereviewcrab.jpg" class="image-fluid imageshadow2">
+                <h3>As an intensely cultural crab, I feel it is my duty to impart some of my wisdom to you through a few reviews.
+                </h3>
+
 
 <br>
     <div class="card-deck">
