trying to figure out text overlap

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="row">
         <div class="col-7">
               <img src="images/wokeuplikethiscrab.jpg" class="image-fluid imageshadow">
-              <h2> Who Am I?</h2>
+              <h6> Who Am I?</h6>
             </div>
             <div class="col-5">
               <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
@@ -82,14 +82,8 @@
         </div>
     </div>
   <br>
-<div class="vl"></div>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<h1>Doing the Gram for the Fans</h1>
+<h1>Follow me</h1>
 <div id="pixlee_container">
 </div>
 </section>
