text on crabwears slightly nicer

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -18,12 +18,12 @@
   <h1 id="header" class="centered">I draw too</h1>
     <div class="parallax2">
     </div>
-
-
-
+<br>
+<br>
+<br>
     <div contrast>
       <div class="container">
-        <img src="images/artycrabcrop.jpg" class="img-fluid imageshadow" alt="Responsive image">
+        <img src="images/artycrabcrop.jpg" class="img-fluid imageshadow2" alt="Responsive image">
           <div class="text-block">
           </div>
       </div>
