--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -21,10 +21,16 @@
     </div>
 
     <div class="contrast">
-       <img src="images/pensivereviewcrab.jpg" class="image-fluid imageshadow2">
-                <h3>As an intensely cultural crab, I feel it is my duty to impart some of my wisdom to you through a few reviews.
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-7">
+            <img src="images/pensivereviewcrab.jpg" class="image-fluid imageshadow2">
+          </div>
+            <div class="col-5">
+              <h3><br><br>As an intensely cultural crab, I feel it is my duty to impart some of my wisdom to you through a few reviews.
                 </h3>
-
+              </div>
+            </div>
 
 <br>
     <div class="card-deck">
