--- a/crabwears.html
+++ b/crabwears.html
@@ -17,19 +17,17 @@
     <div class="contrast">
 
 <img src="images/fashionphotos.jpg">
-By now you'll have seen I'm a true trendsetter. All of my crab friends look to <i>me</i> to see what's en vogue.
-<br>
-This season? It's rouge darling.
-<br>
-<br>
+<h5>By now you'll have seen I'm a true trendsetter. All of my friends look to <i>me</i> to see what's en vogue.</h5>
+<h5>This season? It's rouge darling.</h5>
 <img src="images/aspinalcrab.jpg">
-I wanted it in red... #lol jokes. Red Aspinal always... as seen on me.
+<h8>I wanted it in red... #lol jokes. Red Aspinal always... as seen on me.</h8>
 <br>
 <img src="images/mycalveinscrab.jpg" class="img-fluid d-block w-100">
-Just chilling in #mycalveins
+<h5>Just chilling in #mycalveins</h5>
 <br>
 <img src="images/filacrab%202.jpg" style=image>
-Fila is your cue if you want to get waAvVyYY.
+<h8>Fila is your cue if you want to get waAvVyYY.</h8>
+
 <br>
   <div class="col-2">
   </div>
@@ -37,16 +35,13 @@ Fila is your cue if you want to get waAvVyYY.
 <footer>
                <div class="container">
                  <div class="row">
-                   <br>
+                  <div class="col-lg-10 col-lg-offset-1 text-center">
+                         <br>
                            <ul class="list-inline social">
-                                   <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-instagram fa-fw fa-2x"></i></a>
-                                   <a href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
-                                  <a href="https://www.linkedin.com/company/code-first-girls/" target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
-                                  <a href="mailto:crab@justcrab.com" target="_blank"><i class="fa fa-envelope-o fa-fw fa-2x"></i></a>
+                                   <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
+                                   <a href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                                  <a href="https://www.linkedin.com/company/code-first-girls/" target="_blank"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                            </ul>
-                  <div class:"footerline":>
-                    <p style="font-size:50%;text-align:left">Copyright © Consufashun 2018</p>
-                  </div>
                        </div>
                    </div>
                </div>
