--- a/crabdraws.html
+++ b/crabdraws.html
@@ -35,7 +35,7 @@
   width: 100%;
   opacity: 0;
   transition: .5s ease;
-  background-color: red;
+  background-color: #8B0000;
 }
 
 .hovercontainer:hover .overlay {
@@ -65,7 +65,6 @@
   transform: translate(-50%, -50%);
   text-align: center;
 }
-
   </style>
 
     <title>crabdraws</title>
