nav bar devoploment

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li class="nav-item">
           <a class="nav-link" href="crabwears.html">Wears</a>
         </li>
+        <li class="spacing" &#183; ></li>
         <li class="nav-item">
           <a class="nav-link" href="crabdraws.html">Draws</a>
         </li>
@@ -46,9 +47,6 @@
       </ul>
     </div>
 </nav>
-<div id="home"></div>
-<div id="#About-Crab"></div>
-
 
 <section id="my-carousel">
     <div id="indexcarousel" class="carousel slide" data-ride="carousel">
