--- a/crabdraws.html
+++ b/crabdraws.html
@@ -80,13 +80,13 @@
 <br>
     <div contrast>
       <div class="container">
-        <img src="images/artycrabcrop.jpg" class="img-fluid imageshadow2" alt="Responsive image">
+        <img src="images/artycrabcrop.jpg" class="img-fluid imageshadow2" alt="crab painting">
           <div class="text-block">
             <h3>Crab Draws</h3>
           </div>
       </div>
         <div>
-      <p>As I an immensely caring, talented, (and modest) crab, I am most altrustic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
+      <p>As an immensely caring, talented, (and modest) crab, I am most altrustic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
         (Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)</p>
       </div>
 
