--- a/crabdraws.html
+++ b/crabdraws.html
@@ -74,7 +74,7 @@
 
     <!-- Navigation -->
     <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-transparent">
-      <a class="navbar-brand" href="index.html"><img src="images/clawlogo.jpg" height="30" width ="30"></a>
+      <a class="navbar-brand" href="index.html"><img src="images/greyclaw.png" height="30" width ="30"></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -82,7 +82,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-    
+
             <li class="nav-item">
               <a class="nav-link" href="#About-Crab">Crab...</span></a>
             </li>
