--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -47,8 +47,9 @@
     </nav>
 
 
-    <h1>I recommend</h1>
-
+    <h1 id="header" class="centered">I recommend</h1>
+      <div class="parallax3">
+      </div>
 
     <div class="contrast">
       <div class="container-fluid">
