--- a/crabwears.html
+++ b/crabwears.html
@@ -46,13 +46,13 @@
     <div class="contrast">
 
 <img src="images/fashionphotos.jpg">
-<h5>By now you'll have seen I'm a true trendsetter. All of my friends look to <i>me</i> to see what's en vogue.</h5>
-<h5>This season? It's rouge darling.</h5>
+<h9>By now you'll have seen I'm a true trendsetter. All of my friends look to <i>me</i> to see what's en vogue.</h9>
+<95>This season? It's rouge darling.</h9>
 <img src="images/aspinalcrab.jpg">
 <h8>I wanted it in red... #lol jokes. Red Aspinal always... as seen on me.</h8>
 <br>
 <img src="images/mycalveinscrab.jpg" class="img-fluid d-block w-100">
-<h5>Just chilling in #mycalveins</h5>
+<h9>Just chilling in #mycalveins</h9>
 <br>
 <img src="images/filacrab%202.jpg" style=image>
 <h8>Fila is your cue if you want to get waAvVyYY.</h8>
