--- a/crabdraws.html
+++ b/crabdraws.html
@@ -114,7 +114,7 @@
           </div>
       </div>
         <div>
-      <p>As an immensely caring, talented, (and modest) crab, I am most altrustic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
+      <p>I'm a caring, talented, and modest crab. Altrustic when it comes to giving back to my peers, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
         (Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)</p>
       </div>
 
