--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <img src="images/wokeuplikethiscrab.jpg" class="image-fluid imageshadow">
             </div>
             <div class="col-5">
-              <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
+              <p>I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share with you aspects of my very busy and important life.<p/>
           </div>
         </div>
     </div>
