--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
   </head>
 
   <body>
-<!-- Navbar still need to add color and spacing utiltiy clasess to css?-->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.2"></script>
 
-<nav class="navbar sticky-top navbar-expand-sm navbar-light bg-transparent">
+<!-- Navigation-->
+
+<nav class="navbar fixed-top navbar-expand-sm navbar-light bg-white">
   <a class="navbar-brand" href="index.html"><img src="images/greyclaw.png" height="30" width ="30"></a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,15 +32,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="home"> <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="#About-Crab">Crab...<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="crabwears.html">Wears</a>
         </li>
-        <li class="spacing" &#183; ></li>
         <li class="nav-item">
           <a class="nav-link" href="crabdraws.html">Draws</a>
         </li>
@@ -45,8 +44,14 @@
           <a class="nav-link" href="crabrecommends.html">Recommends</a>
         </li>
       </ul>
+        <a href="https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @CodeFirstGirls</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a class="fb-like" data-href="https://www.facebook.com/crab.obeverley" data-width="15" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></a>
     </div>
+  </div>
 </nav>
+
+<!--- End of Navigation --->
+
 
 <section id="my-carousel">
     <div id="indexcarousel" class="carousel slide" data-ride="carousel">
@@ -67,12 +72,12 @@
 </section>
 
 <section id=About-Crab>
-  <div class="contrast">
+  <div class="contrast2">
     <div class="container-fluid">
       <div class="row">
         <div class="col-7">
-            <h6> Who Am I?</h6>
-            <img src="images/wokeuplikethiscrab.jpg" class="image-fluid imageshadow">
+              <img src="images/wokeuplikethiscrab.jpg" class="image-fluid imageshadow">
+              <h2> Who Am I?</h2>
             </div>
             <div class="col-5">
               <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
@@ -80,8 +85,14 @@
         </div>
     </div>
   <br>
+<div class="vl"></div>
 <br>
-<h8>Follow me</h8>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h1>Doing the Gram for the Fans</h1>
 <div id="pixlee_container">
 </div>
 </section>
