Adding footer to other pages
Not sure why it's showing up differently on each page

--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -10,6 +10,7 @@
 
     <!-- CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Crab Recommends</title>
   </head>
@@ -157,4 +158,22 @@ function seemore3() {
 
 
 </body>
+<footer>
+               <div class="container">
+                 <div class="row">
+                  <div class="col-lg-10 col-lg-offset-1 text-center">
+                         <br>
+                           <ul class="list-inline social">
+                                   <a href="https://www.instagram.com/just_crab_/" target="_blank"><i class="fa fa-instagram fa-fw fa-2x"></i></a>
+                                   <a href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
+                                  <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
+                                  <a href="mailto:crab@justcrab.com" target="_blank"><i class="fa fa-envelope-o fa-fw fa-2x"></i></a>
+                          </ul>
+<div class:"footerline":>
+<p style="font-size:50%;text-align:left">Copyright © Consufashun 2018</p>
+</div>
+                       </div>
+                   </div>
+               </div>
+           </footer>
 </html>
