--- a/crabdraws.html
+++ b/crabdraws.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -254,4 +254,22 @@
 </div>
 <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
 </body>
+<footer>
+               <div class="container">
+                 <div class="row">
+                  <div class="col-lg-10 col-lg-offset-1 text-center">
+                         <br>
+                           <ul class="list-inline social">
+                                   <a href="https://www.instagram.com/just_crab_/" target="_blank"><i class="fa fa-instagram fa-fw fa-2x"></i></a>
+                                   <a href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
+                                  <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
+                                  <a href="mailto:crab@justcrab.com" target="_blank"><i class="fa fa-envelope-o fa-fw fa-2x"></i></a>
+                          </ul>
+<div class:"footerline":>
+<p style="font-size:50%;text-align:left">Copyright © Consufashun 2018</p>
+</div>
+                       </div>
+                   </div>
+               </div>
+           </footer>
 </html>
