improved 'read more button but not perfect

--- a/crabwears.html
+++ b/crabwears.html
@@ -47,7 +47,7 @@
 
 <img src="images/fashionphotos.jpg">
 <h9>By now you'll have seen I'm a true trendsetter. All of my friends look to <i>me</i> to see what's en vogue.</h9>
-<95>This season? It's rouge darling.</h9>
+<h9>This season? It's rouge darling.</h9>
 <img src="images/aspinalcrab.jpg">
 <h8>I wanted it in red... #lol jokes. Red Aspinal always... as seen on me.</h8>
 <br>
