--- a/imagebank.html
+++ b/imagebank.html
@@ -99,3 +99,123 @@
   -   <div class="carousel-item">
       <img src="images/crabinlove%202.jpg" class="img-fluid d-block w-100" alt="lover">
     </div>
+
+
+original card-deck
+    <br>
+        <div class="card-deck">
+          <div class="card">
+            <img class="card-img-top" src="images/betterkiff.jpg" alt="Ken Kiff">
+                <div class="card-body">
+                    <h5 class="card-title">Ken Kiff: The Sequence • Sainsbury Centre • 17th November – Sunday 21st April</h5>
+                      <p2 class="card-text">Shown in it’s closest proximity to completeness yet, the 60 piece series of paintings from Ken Kiff’s  Sequence at the Sainsbury Centre is well worth the trip<span id="dots">...</span><span id="more"> (and was also for me a wonderful excuse to discover the delights of Norwich). Despite his paintings are often unrealistic and illogical, to the point that on first glance they appear almost childish, fusing sensitive application of colour allows them to sing for themselves. The effect of joyful colour palette, combined with his strange, and often slightly unsavoury subject matter emphasises an arresting fusion of various juxtapositions the beautiful and ugly, the fantastical and everyday banality.
+                      </span></p2>
+                        <button onclick="seemore1()" id="myBtn">Read more</button>
+                </div>
+              </div>
+          <div class="card">
+            <img class="card-img-top" "fs-gal" src="images/wildlifeartistoftheyear.jpg" alt="Rupi Kaur" data-url="images/wildlifeartistoftheyear.jpg">
+            <div class="card-body">
+              <h5 class="card-title">Wildlife Photographer of the Year • Natural History Museum • on ‘til 30th June</h5>
+              <p2 class="card-text">Whether you are a wildlife fanatic or not, there is so much to gain from this show. ‘Wildlife Photographer of the Year’ is a stunning exhibition<span id="dots">...</span><span id="more">, made more so by its considered combination of image with word. Photographs that are captivating in their own right are made all the more powerful by the stories written below, which give insight into the wildlife, and the phenomenal effort and length taken to capture each picture. Particularly poignant is Adrian Bliss’s fox, quiet in the midst of Chernobyl’s rubble, which since its human abandonment has become a thriving habitat for Ukrainian wildlife. Photo-journalism shots document still deeper stories; painful snapshots of exploitation show a tiger debilitated by poaching, a sun bear crying from its cage, a monkey trapped in a circus which continues to go on. These are interspersed with more hopeful portraits, like of Bob the flamingo spreading the message for conservation on national television, and soothing rescued flamingos to aid their rehabilitation. With each photograph, you see the power and the intricacy of nature, and are made to feel first hand the devastating effect that our impact has had on it. A lot is told and a lot can be learned. You come away with with a greater understanding of the animal world, and the time, skill and passion that goes into capturing it. There is a real sense of the passion behind the lens being shared, and I left feeling strangely uplifted, and enlivened by the thought of the opportunity that this exhibitions brings; for so many people to be made aware of these stories which are lesser known; to be moved by that which is not so often told; and hopefully to feel some connection, and desire to conserve these places from which they are so far removed.
+              </span></p2>
+              <button onclick="seemore2()" id="myBtn2">Read more</button>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" "fs-gal" src="images/tanning.jpg" alt="Dorothy Tanning" data-url="images/tanning.jpg">
+            <div class="card-body">
+              <h5 class="card-title">Dorothea Tanning • Tate Modern • 27 February – June 2019</h5>
+              <p2 class="card-text">Thank you Tate for re-shedding some light on Dorothy Tanning, in the first large-scale exhibition of her work in over 25 years<span id="dots">...</span><span id="more">. Whilst Tanning has perhaps lived slightly in the shadows of her husband and one giants of the Surrealist movement, Max Ernst, this exhibition shows how she took Surrealism to an entirely new level. Whilst her intricately painted older paintings stay truer to the Surrealist tradition, evoking the Gothic through wacky scenarios and landscapes which invite the viewer into a world beyond the tangible, her later paintings are even more successful in conveying a sense of the surreal. As epic in subject matter as they are in size, Tanning confronts us with what it is to be a body in a series of writhing paintings, convulsing with abstracted forms which are at once undoubtedly human, and unsettlingly alien. This sense of discomfort is enhance, as despite the sensuous fleshiness of the brushstrokes, it is difficult to tell whether these tangled masses of figures are revellers or rivals. The same could be said for her soft sculptures, which reduced to a heap of suggestively limb-like curves radiate a disquieting sense of vulnerability and helplessness. With her uncanny ability to evoke such emotion and tangibility through such an abstracted pose or gesture, Tanning leaves us with some disconcerting questions about what actually constitute life and perhaps what it means to take it.
+              </span></p2>
+              <button onclick="seemore3()" id="myBtn3">Read more</button>
+            </div>
+          </div>
+        </div>
+        <div class="card-deck">
+          <div class="card">
+          <img class="card-img-top" "fs-gal" src="images/kaurinternet.jpg" alt="Rupi Kaur" data-url="images/kaurinternet.jpg">
+          <div class="card-body">
+            <h5 class="card-title">The Sun and Her Flowers • Rupi Kaur</h5>
+            <p2 class="card-text">Rupi Kaur’s done it! She writes poems for everyone- even those that think they don’t like poetry<span id="dots">...</span><span id="more">!
+    Beautifully framed within her central message that people must 'fall, root, rise, in order to bloom' Kaur’s collection movingly narrates a journey from grief and abjection to love and empowerment. Kaur combines simple illustrations with economically written passages, whose fragmentary nature resemble the thought patterns of their powerfully singular voice. Un-punctuated, uncapitalised and unassuming on the page, her words resound with a weighty rawness, confronting emotionally difficult traumas and setbacks with sensitivity and acceptance. Comfortingly honest and beautifully uplifting, this IS a must read.
+    </span></p2>
+          <button onclick="seemore4()" id="myBtn4">Read more</button>
+        </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" "fs-gal" src="images/greatwomenartistsexhibition.jpg" alt="In the Company Of" data-url="images/greatwomenartistsexhibition.jpg">
+          <div class="card-body">
+            <h5 class="card-title">In the Company of • TJ Boulting • 16th September - 7th November.
+    </h5>
+            <p2 class="card-text">If you have a spare hour over the rest of the week, catch ‘In the company of’ before it ends <span id="dots">...</span><span id="more">on the 17th November. Curated by Katy Hessel of @thegreatwomenartists, the exhibition places work from three very established artists Alice Neel, Barbara Hepworth and Lee Miller, beside pieces by twelve contemporary female artists to highlight their influence upon, and affinities with their preceding generations. Hessel’s curation does well to cement the idea of the shared artistic language between the old and new: little priority is given to any artist, and pieces from established artists are interpsersed with that of the emerging; encouraging the sense of their being in dialogue with one another. All of these artists use traditional techniques in contemporary ways, and it’s great to see such a diverse range of mediums and styles complementing and contrasting with one another. Rather than leave too much to the imagination- an angle frequently adopted by contemporary galleries that is guilty for leaving an observer at a complete and utter loss- Hessel’s short descriptions and quotes from each contemporary artist give an insight into each work that is both informative and digestible. A worthwhile trip to see work from some really exciting new artists as well as from some old favourites that are usually stashed away in private collections.
+         </span></p2>
+        <button onclick="seemore5()" id="myBtn5">Read more</button>
+      </div>
+    </div>
+    <div class="card">
+    <img class="card-img-top" "fs-gal" src="images/koons.jpg" alt="Jeff Koons" data-url="images/koons.jpg">
+    <div class="card-body">
+      <h5 class="card-title">Jeff Koons at The Ashmolean • 7th February – 9th June.</h5>
+      <p2 class="card-text">I went to this exhibition with reservation. <span id="dots">...</span><span id="more">The giant of the art money world, Jeff Koon’s works seemed to me to be nothing more than ginourmously oversized and garishly kitsch. However, as this exhibition reveals, as a conceptual artist Koons excels, with his thinking is interesting and extensive. Koons’ ability to create art which is in dialogue with art history, which manages to connect highly intelligent and philosophical ideas, with creations which invite a very basic sensory enjoyment makes him perhaps one of the most democratic artists of our day.
+    </span></p2>
+    <button onclick="seemore6()" id="myBtn6">Read more</button>
+    </div>
+
+    </div>
+
+    </div>
+    </div>
+
+    <script>
+    function seemore1() {
+      var dots = document.getElementById("dots");
+      var moreText = document.getElementById("more");
+      var btnText = document.getElementById("myBtn");
+
+      if (dots.style.display === "none") {
+        dots.style.display = "inline";
+        btnText.innerHTML = "Read more";
+        moreText.style.display = "none";
+      } else {
+        dots.style.display = "none";
+        btnText.innerHTML = "Read less";
+        moreText.style.display = "inline";
+      }
+    }
+    </script>
+    <script>
+    function seemore2() {
+      var dots = document.getElementById("dots");
+      var moreText = document.getElementById("more");
+      var btnText = document.getElementById("myBtn2");
+
+      if (dots.style.display === "none") {
+        dots.style.display = "inline";
+        btnText.innerHTML = "Read more";
+        moreText.style.display = "none";
+      } else {
+        dots.style.display = "none";
+        btnText.innerHTML = "Read less";
+        moreText.style.display = "inline";
+      }
+    }
+    </script>
+
+    </script>
+    <script>
+    function seemore3() {
+      var dots = document.getElementById("dots");
+      var moreText = document.getElementById("more");
+      var btnText = document.getElementById("myBtn3");
+
+      if (dots.style.display === "none") {
+        dots.style.display = "inline";
+        btnText.innerHTML = "Read more";
+        moreText.style.display = "none";
+      } else {
+        dots.style.display = "none";
+        btnText.innerHTML = "Read less";
+        moreText.style.display = "inline";
+      }
+    }
