--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-7">
-            <h6> Who Am I?</h6>
-            <img src="images/wokeuplikethiscrab.jpg" class="image-fluid imageshadow">
+            <h6>about me</h6>
+            <img src="images/wokeuplikethiscrab.jpg" class="image-fluid" "imageshadow">
             </div>
             <div class="col-5">
               <p>I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share with you aspects of my very busy and important life.<p/>
-          </div>
+        </div>
         </div>
     </div>
   <br>
 <br>
-<h8>Follow me</h8>
 <div id="pixlee_container">
+  <h6>follow me</h6>
 </div>
 </section>
 
