--- a/crabwears.html
+++ b/crabwears.html
@@ -10,19 +10,24 @@
   </head>
   <body>
 
-
-
-
 <h1 id="header" class="centered">I love a bit of red</h1>
 <div class="parallax">
 </div>
 
     <div class="contrast">
 
-<img src="images/fashionphotos.jpg">
-<h9>By now you'll have seen I'm a true trendsetter. All of my friends look to <i>me</i> to see what's en vogue.</h9>
-<95>This season? It's rouge darling.</h9>
-<img src="images/aspinalcrab.jpg">
+<img src="images/fashionphotos.jpg" align="left">
+  <br>
+<h9>By now you'll have seen I'm a true trendsetter.
+  All of my friends look to <i>me</i>
+  to see what's en vogue.</h9>
+<h9>This season? It's rouge darling.</h9>
+  <br>
+<img src="images/aspinalcrab.jpg" alt="" class="img-fluid d-block w-100">
+                                    </div>
+                                </a>
+                            </div>
+                                                </div>
 <h8>I wanted it in red... #lol jokes. Red Aspinal always... as seen on me.</h8>
 <br>
 <img src="images/mycalveinscrab.jpg" class="img-fluid d-block w-100">
