nav social buttons FINALLY

--- a/crashion.html
+++ b/crashion.html
@@ -36,6 +36,9 @@ I wanted it in red... #lol jokes. Red Aspinal always... as seen on me.
   <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 </form>
 
+<span>
+  <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcrab.obeverley&width=15&layout=button&action=like&size=small&show_faces=true&share=false&height=65&appId" width="15" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+</span>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
