--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.2"></script>
 
 <!-- Navigation-->
-
-<nav class="navbar fixed-top navbar-expand-sm navbar-light bg-white">
+<nav class="navbar fixed-top navbar-expand-sm navbar-light" style="background-color: rgba(134, 13, 13, 0.9);">
   <a class="navbar-brand" href="index.html"><img src="images/greyclaw.png" height="30" width ="30"></a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,32 +31,31 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="#About-Crab">Crab...<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="crabwears.html">Wears</a>
+          <a class="nav-link" href="crabwears.html">WEARS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="crabdraws.html">Draws</a>
+          <a class="nav-link" href="crabdraws.html">DRAWS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="crabrecommends.html">Recommends</a>
+          <a class="nav-link" href="crabrecommends.html">RECOMMENDS</a>
         </li>
       </ul>
-      <span>
-        <a href="https://www.facebook.com/crab.obeverley"><img src="images/facebook-button.svg" height="30"></a>
+      <span class="social-nav">
+        <a href="https://www.facebook.com/crab.obeverley"><img src="images/facebook-button.svg" height="30" alt="facebook button"></a>
       </span>
-      <span>
-        <a href="https://twitter.com/CodeFirstGirls"><img src="images/twitter-button.svg" height="30"></a>
+      <span class="social-nav">
+        <a href="https://twitter.com/CodeFirstGirls"><img src="images/twitter-button.svg" height="30" alt="twitter button"></a>
       </span>
-      <span>
-        <a href="https://www.instagram.com/just_crab"><img src="images/instagram-button.svg" height="30"></a>
+      <span class="social-nav">
+        <a href="https://www.instagram.com/just_crab"><img src="images/instagram-button.svg" height="30" alt="instagram button"></a>
       </span>
     </div>
   </div>
 </nav>
-
 <!--- End of Navigation --->
 
 
