attempting to format crabwears

--- a/crabwears.html
+++ b/crabwears.html
@@ -16,25 +16,17 @@
 
     <div class="contrast">
 
-<<<<<<< HEAD
-<img src="images/fashionphotos.jpg" align="left">
-  <br>
+<div class="image1">
+<img src="images/fashionphotos.jpg" align="left" >
+</div>
+
 <h9>By now you'll have seen I'm a true trendsetter.
   All of my friends look to <i>me</i>
   to see what's en vogue.</h9>
 <h9>This season? It's rouge darling.</h9>
   <br>
 <img src="images/aspinalcrab.jpg" alt="" class="img-fluid d-block w-100">
-                                    </div>
-                                </a>
-                            </div>
-                                                </div>
-=======
-<img src="images/fashionphotos.jpg">
-<h9>By now you'll have seen I'm a true trendsetter. All of my friends look to <i>me</i> to see what's en vogue.</h9>
-<h9>This season? It's rouge darling.</h9>
-<img src="images/aspinalcrab.jpg">
->>>>>>> 8772af90416a84f1f64065dd971006c57176c710
+
 <h8>I wanted it in red... #lol jokes. Red Aspinal always... as seen on me.</h8>
 <br>
 <img src="images/mycalveinscrab.jpg" class="img-fluid d-block w-100">
@@ -46,6 +38,7 @@
 <br>
   <div class="col-2">
   </div>
+</div>
 </div>
 <footer>
                <div class="container">
