--- a/crabdraws.html
+++ b/crabdraws.html
@@ -12,6 +12,7 @@
     <!-- CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <style>
       .hovercontainer{
       position: relative;
@@ -64,22 +65,52 @@
       transform: translate(-50%, -50%);
       text-align: center;
     }
-
       </style>
 
     <title>crabdraws</title>
   </head>
 
   <body>
+    <!-- Navigation-->
+    <nav class="navbar fixed-top navbar-expand-sm navbar-light" style="background-color: rgba(255, 255, 255, 0.9);">
+      <a class="navbar-brand" href="index.html"><img src="images/greyclaw.png" height="30" width ="30"></a>
 
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#About-Crab">Crab...<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="crabwears.html">WEARS</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="crabdraws.html">DRAWS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="crabrecommends.html">RECOMMENDS</a>
+            </li>
+          </ul>
+          <span class="social-nav">
+            <a href="https://www.facebook.com/crab.obeverley"><img src="images/facebook-button.svg" height="30" alt="facebook button"></a>
+          </span>
+          <span class="social-nav">
+            <a href="https://twitter.com/CodeFirstGirls"><img src="images/twitter-button.svg" height="30" alt="twitter button"></a>
+          </span>
+          <span class="social-nav">
+            <a href="https://www.instagram.com/just_crab"><img src="images/instagram-button.svg" height="30" alt="instagram button"></a>
+          </span>
+        </div>
+      </div>
+    </nav>
+    <!--- End of Navigation --->
 
   <h1 id="header" class="centered">I draw too</h1>
     <div class="parallax2">
     </div>
-
-
 
     <div contrast>
         <div class="media">
@@ -132,94 +163,6 @@
     </div>
 
     <br>
-
-    <!--testing hover. HOW TO GRID-->
-        <div class="contrast">
-
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                      <img src="images/orang.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Orangutan I</div>
-                        <div class="project-name">Acrylic on paper 2018</div>
-                      </div>
-                    </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/orang2.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Orangutan II</div>
-                        <div class="project-name">Gouache on paper 2019</div>
-                      </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/giraffe1.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Giraffe I</div>
-                        <div class="project-name">Acrylic on paper 2018</div>
-                      </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/giraffe2.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Giraffe II</div>
-                        <div class="project-name">Acrylic on paper 2018</div>
-                      </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/chimp2.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Throwing Bananas</div>
-                        <div class="project-name">Acrylic on linen 2018</div>
-                      </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/chimpsquare.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Kenyan Chimp</div>
-                        <div class="project-name">Acrylic on Paper, 2018</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
 
     <div class="contrast">
     <section class="p-0" id="portfolio">
@@ -315,6 +258,17 @@
                   </div>
                 </a>
             </div>
+        <div>
+        <form>
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">What you sayin</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+        </div>
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
