(failed) attempt to space social icons out in footer

--- a/crabwears.html
+++ b/crabwears.html
@@ -4,8 +4,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<link rel="stylesheet" type="text/css" href="css/styles.css">
+	  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- CSS stylesheet -->
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>Crab Wears</title>
   </head>
   <body>
@@ -22,13 +26,13 @@
             <li class="nav-item">
               <a class="nav-link" href="#About-Crab">Crab...<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="crabwears.html">WEARS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="crabdraws.html">DRAWS</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="crabrecommends.html">RECOMMENDS</a>
             </li>
           </ul>
@@ -46,8 +50,8 @@
     </nav>
     <!--- End of Navigation --->
 <h1 id="header" class="centered">I wear</h1>
-<div class="parallax">
-</div>
+  <div class="parallax">
+  </div>
 
     <div class="contrast">
 
