--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="row">
         <div class="col-7">
             <h6>about me</h6>
-            <img src="images/wokeuplikethiscrab.jpg" class="imageshadow" "imagefluid">
+            <img src="images/wokeuplikethiscrab.jpg" class="imageshadow" "imag-fluid">
             </div>
             <div class="col-5">
               <h1>I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share with you aspects of my very busy and important life.</h1>
@@ -119,11 +119,11 @@
                                   <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
                                   <a href="mailto:crab@justcrab.com" target="_blank"><i class="fa fa-envelope-o fa-fw fa-2x"></i></a>
                           </ul>
-<div class:"footerline":>
-<p style="font-size:50%;text-align:left">Copyright © Consufashun 2018</p>
+<div class:"footerline">
+<p>Copyright © Consufashun 2018</p>
 </div>
-                       </div>
-                   </div>
-               </div>
+</div>
+</div><
+</div>
 </footer>
 </html>
