fixing navbar/ editing index text

--- a/index.html
+++ b/index.html
@@ -77,14 +77,13 @@
 </section>
 <section id=About-Crab>
   <div class="contrast2">
-    <div class="container-fluid">
       <div class="row">
         <div class="col-7">
             <h6>about me</h6>
-            <img src="images/wokeuplikethiscrab.jpg" class="imageshadow" "imag-fluid">
+            <img src="images/wokeuplikethiscrab.jpg" class="img-fluid imageshadow">
             </div>
             <div class="col-5">
-              <h1>I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share with you aspects of my very busy and important life.</h1>
+              <p>I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share with you aspects of my very busy and important life.</p>
         </div>
         </div>
     </div>
