trying to get contrast back over whole thing

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -80,18 +80,17 @@
     </div>
 
 
-
-    <div contrast>
-        <div class="media">
+<div contrast>
+        <div container>
+          <div class="row">
+            <div class="col-7">
         <img src="images/artycrabcrop.jpg" class="align-self-center mr-3 img-fluid imageshadow2" alt="crab painting">
-        <div class="media-body">
+      </div>
+      <div class="col-5">
             <p>I'm a caring, talented, and modest crab. Altrustic when it comes to giving back to my peers, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
               (Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)</p>
         </div>
       </div>
-
-
-<div class="container-fluid">
     <h4>Fancy doing some of your own do-gooding by buying a picture?</h4>
 
     <!-- Button trigger modal -->
@@ -134,94 +133,68 @@
     <br>
 
     <!--testing hover. HOW TO GRID-->
-        <div class="contrast">
 
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                      <img src="images/orang.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Orangutan I</div>
-                        <div class="project-name">Acrylic on paper 2018</div>
-                      </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <div class="hovercontainer">
+                  <img src="images/orang.jpg" alt="Avatar" class="image">
+                    <div class="overlay">
+                      <div class="orangutantext">Orangutan I</div>
+                      <div class="project-name">Acrylic on paper 2018</div>
                     </div>
                 </div>
-              </div>
-            </div>
 
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/orang2.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Orangutan II</div>
-                        <div class="project-name">Gouache on paper 2019</div>
-                      </div>
-                  </div>
-                </div>
               </div>
-            </div>
+           <div class="col-sm">
+               <div class="hovercontainer">
+                 <img src="images/giraffe1.jpg" alt="Avatar" class="image">
+                   <div class="overlay">
+                     <div class="orangutantext">Giraffe I</div>
+                     <div class="project-name">Acrylic on paper 2018</div>
+                 </div>
+               </div>
 
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/giraffe1.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Giraffe I</div>
-                        <div class="project-name">Acrylic on paper 2018</div>
-                      </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+             </div>
+           <div class="col-sm">
+               <div class="hovercontainer">
+                 <img src="images/orang2.jpg" alt="Avatar" class="image">
+                   <div class="overlay">
+                     <div class="orangutantext">Orangutan II</div>
+                     <div class="project-name">Gouache on paper 2019</div>
+                   </div>
+                 </div>
+                   <br>
 
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/giraffe2.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Giraffe II</div>
-                        <div class="project-name">Acrylic on paper 2018</div>
-                      </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/chimp2.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Throwing Bananas</div>
-                        <div class="project-name">Acrylic on linen 2018</div>
-                      </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/chimpsquare.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Kenyan Chimp</div>
-                        <div class="project-name">Acrylic on Paper, 2018</div>
-                      </div>
+                   <div class="row">
+              <div class="col-sm">
+                <div class="hovercontainer">
+                  <img src="images/giraffe2.jpg" alt="Avatar" class="image">
+                    <div class="overlay">
+                      <div class="orangutantext">Giraffe II</div>
+                      <div class="project-name">Acrylic on paper 2018</div>
                     </div>
-                  </div>
-                </div>
+              </div>
+            </div>
+
+            <div class="col-sm">
+          <div class="hovercontainer">
+            <img src="images/chimp2.jpg" alt="Avatar" class="image">
+              <div class="overlay">
+                <div class="orangutantext">Throwing Bananas</div>
+                <div class="project-name">Acrylic on linen 2018</div>
+              </div>
+          </div>
+
+          <div class="col-sm">
+       <div class="hovercontainer">
+         <img src="images/chimpsquare.jpg" alt="Avatar" class="image">
+           <div class="overlay">
+             <div class="orangutantext">Kenyan Chimp</div>
+             <div class="project-name">Acrylic on Paper, 2018</div>
+           </div>
               </div>
 
-
-    <div class="contrast">
     <section class="p-0" id="portfolio">
         <div class="container-fluid p-0">
           <div class="row no-gutters popup-gallery">
@@ -361,6 +334,10 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+</div>
+</div>
 
 
 <br>
