--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 </section>
 <section id=About-Crab>
   <div class="contrast2">
+    <div container>
       <div class="row">
         <div class="col-7">
             <h6>about me</h6>
