trying to put about in a container

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -78,19 +78,22 @@
   <h1 id="header" class="centered">I draw too</h1>
     <div class="parallax2">
     </div>
-
-
+<br>
+<br>
 <div contrast>
         <div container>
           <div class="row">
-            <div class="col-7">
-        <img src="images/artycrabcrop.jpg" class="align-self-center mr-3 img-fluid imageshadow2" alt="crab painting">
+            <div class="col-sm">
+        <img src="images/artycrabcrop.jpg" class="img-fluid imageshadow2" alt="crab painting">
       </div>
-      <div class="col-5">
+      <div class="col-sm">
             <p>I'm a caring, talented, and modest crab. Altrustic when it comes to giving back to my peers, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
               (Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)</p>
         </div>
       </div>
+    </div>
+    <br>
+    <br>
     <h4>Fancy doing some of your own do-gooding by buying a picture?</h4>
 
     <!-- Button trigger modal -->
@@ -128,7 +131,7 @@
         </div>
       </div>
       </div>
-    </div>
+
 
     <br>
 
