trying to add margins to make this bloody 'about' page work

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <section id=About-Crab>
   <div class="contrast2">
     <div container>
-      <div class="row">
+      <div class="row px-2">
         <div class="col-7">
             <h6>about me</h6>
             <img src="images/wokeuplikethiscrab.jpg" class="img-fluid imageshadow">
